Related: fdo#74242 #i104470# we now have a seperate CARET_CHANGED event

so cursoring left and right in normal non-multiline edit widgets should
give a11y cursor-changed events

Change-Id: I91e86e43d049793912b3ffcc2802bb9aa4b3857c